# ESP32_MQTT

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/connect/: CMakeLists.txt  connect.c
main/: CMakeLists.txt  aws_iot.c  aws_iot.h  main.c
main/certs/: certificate_pem_crt  private_pem_key
